# postsmtp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: send_html_with_attachments.py  send_plain.py
src/postsmtp/: __init__.py  attachments.py  config.py  exceptions.py  mailer.py  message.py  validators.py
tests/: test_attachments.py  test_config.py  test_mailer.py
